# dagsheets

./: .gitignore  README.md  pyproject.toml
dagsheets/: main.py
dagsheets/auth/: Google.py
tests/: test_dagsheets.py
